--- a/q/276042.html
+++ b/q/276042.html
@@ -26,16 +26,23 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>053</td><td>JavaScript Node.js</td><td>241011T013249Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276047#276047">l4m2</a></td></tr>
-<tr d-ix="1"><td>nan</td><td>Vyxal s</td><td>241011T010339Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276045#276045">lyxal</a></td></tr>
+<tr d-ix="0"><td>019</td><td>Jelly</td><td>241011T020839Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276049#276049">Unrelate</a></td></tr>
+<tr d-ix="1"><td>053</td><td>JavaScript Node.js</td><td>241011T013249Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276047#276047">l4m2</a></td></tr>
+<tr d-ix="2"><td>nan</td><td>Vyxal s</td><td>241011T010339Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276045#276045">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 53 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 19 bytes</h1>
+<pre><code>e€ØWḊae€Øc$kKfƤẹ¦¥⁶
+</code></pre>
+<p><a href="https://tio.run/##bZDNctMwEMfveoo9cMz4HZKQpqGmLrFpKbetvLG2liVjSXHcG1yY4Ql4AODEkWH4uLUzvEf6IkYpHLujmdV@zO7@f9ek9TCOdP/u693Hi/2PD/jvK5/UJ5s/n/a/ft5@uf18//b7uP/97e59rF2O48q0wYss@IMryHmQ6MiJ4zjMTqC3nS4TcW570pC3KNlUorAlDjDYANgRKNzGJCA4jvuh7eyVpiYRc1sSLK3eAJoSHqK5Qq3JVAS5R1kvdlJhjMT0MROzR0286BddMbzkrIWpe7pZqmd1Cjev5PnVaSPeXNDaX4aVPQPMy6Pq@PpEw@vdfDszz8WSt2TiNbAwlWanwNPOTwS2bbx7a6En0OBaBMlgqkR0avCqEUfZulhPTyFd5Wcwz2ZZCtN0maWiUOwgPnnQVkWlCeTKdv6B4iHXs3GJWAlsQFFE5SPRmmUNNvgJaMLyQC5ulBT7/guMM9j06K1T7ClIFQw7a6zB3tZ8gw1PYMFkess1d6HGOlSxjF1oootcFf8F" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
+<p>A bit of a mess with the word logic, but I'm pretty proud of how I golfed the actual spacing 3 bytes down from <code>ḲµJ⁶xⱮż@</code>!</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 53 bytes</h1>
 
 <pre class="lang-none prettyprint-override"><code>x=&gt;x.replace(/ |(?&lt;=[aeiou])(?=\w)/gi,_=&gt;c+=' ',c='')
 </code></pre>
 <p><a href="https://tio.run/##bVHbctMwEH3PV5w324NxfwC3k6RpGjB1iUMplA6jyqqlRpGEJd8Y/j0otYen7uhBu2fPXs6@kJZYWgvj3itdsiPVymrJEqmrcPaAYKNM44J4BgR54/7/d8w6UGKZHf1rJqWO0elalskYutMdkygMoUJVE0uXZMCgG5CagZPWIyCwQsoBptZPkh0m9tIPg7WWzyCqxKu35ERKpiqGwhG6X/WUE@@N@fO3bIQWb9qIfelW9W74KnKDub18XvOP@wx/7und081hzPj9jW3d92ajb0GK8qq6fvkk8aNftgv1ecxYi5YpPyZWqpLCcjjWu3jEiDF@tVajY5CwhoAKqGpasuaD41Ofq3y7285vkG2KWyzzRZ5hnq3zbFKOCwv/6EmIysuSoOC6dq9nOMU6oexUdTO1PoAzL7Pzd9kLuoduXAzJSHlS3Y9CmWfgcZYciAmPfXreJzUz0sfDM/wNLz6kD4QJ3TxG4UX6s4vOKhH/Ss/puzRAENM0CKJjFB3/AQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>s</code>, 151 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 18.875 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>s</code>, 151 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 18.875 bytes</h1>
 <pre><code>øWƛṫ$ƛAI+;ṅp;∑ƛð=[¥I+&amp;›
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJzPSIsIiIsIsO4V8ab4bmrJMabQUkrO+G5hXA74oiRxpvDsD1bwqVJKybigLoiLCIiLCJUb2RheSB5b3UgYXJlIGhhdmluZyBhIHNpbGx5IHByb2JsZW0uIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
