--- a/q/68866.html
+++ b/q/68866.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>697</td><td>JavaScript ES6  97 Bytes</td><td>241010T145629Z</td><td><a href="https://codegolf.stackexchange.com/questions/68866/superstitious-hotel-elevator/276015#276015">ThePlane</a></td></tr>
+<tr d-ix="0"><td>677</td><td>JavaScript ES6  77 Bytes</td><td>241010T145629Z</td><td><a href="https://codegolf.stackexchange.com/questions/68866/superstitious-hotel-elevator/276015#276015">ThePlane</a></td></tr>
 <tr d-ix="1"><td>021</td><td>Vyxal</td><td>241010T101118Z</td><td><a href="https://codegolf.stackexchange.com/questions/68866/superstitious-hotel-elevator/276012#276012">emanresu</a></td></tr>
 <tr d-ix="2"><td>237</td><td>Rust</td><td>241009T093635Z</td><td><a href="https://codegolf.stackexchange.com/questions/68866/superstitious-hotel-elevator/275992#275992">Dornteuf</a></td></tr>
 <tr d-ix="3"><td>021</td><td>Thunno 2 N</td><td>230816T082108Z</td><td><a href="https://codegolf.stackexchange.com/questions/68866/superstitious-hotel-elevator/264240#264240">The Thon</a></td></tr>
@@ -65,7 +65,30 @@
 <tr d-ix="36"><td>132</td><td>Julia</td><td>160108T033510Z</td><td><a href="https://codegolf.stackexchange.com/questions/68866/superstitious-hotel-elevator/68871#68871">Alex A.</a></td></tr>
 <tr d-ix="37"><td>027</td><td>Pyth</td><td>160108T033459Z</td><td><a href="https://codegolf.stackexchange.com/questions/68866/superstitious-hotel-elevator/68870#68870">Maltysen</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6): <strike>113 Bytes</strike> 97 Bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6): <strike>113</strike> <strike>97</strike> 77 Bytes</h1>
+<p><em>-20 by emanresu</em></p>
+<pre class="lang-js prettyprint-override"><code>f=(n,v=-2,x=_=&gt;/^13$|4|^0/.test(++v)?x():v,c=`
+${x()}  `+x())=&gt;n?f(n-2,v)+c:[]
+</code></pre>
+<p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/zVYjT6fMVtdIp8I23tZOP87QWKXGpCbOQF@vJLW4RENbu0zTvkJD06pMJ9k2gUulGsiu5UzQBlKatnZ59mkaeUC9ZZrayVbRsf@T8/OK83NS9XLy0zXSNIw0Na25UIUMTTDFTAxAYvr6CmhKDUDi/wE" rel="nofollow noreferrer">Try it online!</a></p>
+<h3>Explanation:</h3>
+<pre class="lang-js prettyprint-override"><code>f=(  // recursive function f
+    n, // with input n
+  v=-2, // counter = -2;
+  x=_=&gt; // recursive count-up function
+    /^13$|4|^0/.test(++v) // is it a valid number?
+    ?
+        x() // otherwise, continue counting
+    :
+        v,  // if so, return
+  c=`\n${x()}   `+x() // current line
+)=&gt;
+    n? // are we done yet?
+    f(n-2,v)+c // no? add current line
+  :
+    [] // yes? return
+</code></pre>
+<h2>OLD (97 bytes):</h2>
 <pre class="lang-js prettyprint-override"><code>f=(n,i=!(v=-2),x=_=&gt;{while(/^13$|4|^0/.test(++v));},c=`
 `+(x(),v)+` `+(x(),v))=&gt;i&lt;n?f(n,i+2)+c:[]
 </code></pre>
@@ -73,7 +96,8 @@
 <h3>Explanation:</h3>
 <pre class="lang-js prettyprint-override"><code>f=( // recursive function f with input n
     n,
-  i=!(v=-2), // v=-2 works for multiple uses
+  i=!(v=-2), // i=0, v=-2 (works for multiple uses)
+             // technically i=false but false==0 for math op
   x=_=&gt;{ // counter function (from Charlie Wynn's answer)
     while(/^13$|4|^0/.test(++v));
   },
