--- a/q/276042.html
+++ b/q/276042.html
@@ -26,12 +26,21 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>016</td><td>Vyxal</td><td>241011T023608Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276050#276050">emanresu</a></td></tr>
-<tr d-ix="1"><td>019</td><td>Jelly</td><td>241011T020839Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276049#276049">Unrelate</a></td></tr>
-<tr d-ix="2"><td>053</td><td>JavaScript Node.js</td><td>241011T013249Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276047#276047">l4m2</a></td></tr>
-<tr d-ix="3"><td>nan</td><td>Vyxal s</td><td>241011T010339Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276045#276045">lyxal</a></td></tr>
+<tr d-ix="0"><td>017</td><td>Vyxal s</td><td>241011T010339Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276045#276045">lyxal</a></td></tr>
+<tr d-ix="1"><td>016</td><td>Vyxal</td><td>241011T023608Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276050#276050">emanresu</a></td></tr>
+<tr d-ix="2"><td>019</td><td>Jelly</td><td>241011T020839Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276049#276049">Unrelate</a></td></tr>
+<tr d-ix="3"><td>053</td><td>JavaScript Node.js</td><td>241011T013249Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276047#276047">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 16 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>s</code>, 136 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 17 bytes</h1>
+<pre><code>øWƛṫ$ƛA꘍;p∑;ṅƛð=[&amp;›¥I
+</code></pre>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9cyIsIiIsIsO4V8ab4bmrJMabQeqYjTtw4oiRO+G5hcabw7A9WybigLrCpUkiLCIiLCJIZWxsbywgd29ybGQuIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
+<p>Bitstring:</p>
+<pre><code>0001011010100000000000101000111001001011011000111111100111100100001000101110110101111001100100010101101111110101110101000000101011011000
+</code></pre>
+<p>A very silly approach</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 16 bytes</h1>
 <pre><code>⇧a?Aǔ*ÞṗṠ⌈fꜝ₅ɽ꘍∑
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLih6dhP0HHlCrDnuG5l+G5oOKMiGbqnJ3igoXJveqYjeKIkSIsIiIsImNvZGUsIGdvbGYsIGFuZCBjb2RlIl0=" rel="nofollow noreferrer">Try it Online!</a>
@@ -49,7 +58,7 @@ I don't like this but it's probably optimal. +4 bytes due to the weird punctuati
                 ∑ # Concatenate the result
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 19 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 19 bytes</h1>
 <pre><code>e€ØWḊae€Øc$kKfƤẹ¦¥⁶
 </code></pre>
 <p><a href="https://tio.run/##bZDNctMwEMfveoo9cMz4HZKQpqGmLrFpKbetvLG2liVjSXHcG1yY4Ql4AODEkWH4uLUzvEf6IkYpHLujmdV@zO7@f9ek9TCOdP/u693Hi/2PD/jvK5/UJ5s/n/a/ft5@uf18//b7uP/97e59rF2O48q0wYss@IMryHmQ6MiJ4zjMTqC3nS4TcW570pC3KNlUorAlDjDYANgRKNzGJCA4jvuh7eyVpiYRc1sSLK3eAJoSHqK5Qq3JVAS5R1kvdlJhjMT0MROzR0286BddMbzkrIWpe7pZqmd1Cjev5PnVaSPeXNDaX4aVPQPMy6Pq@PpEw@vdfDszz8WSt2TiNbAwlWanwNPOTwS2bbx7a6En0OBaBMlgqkR0avCqEUfZulhPTyFd5Wcwz2ZZCtN0maWiUOwgPnnQVkWlCeTKdv6B4iHXs3GJWAlsQFFE5SPRmmUNNvgJaMLyQC5ulBT7/guMM9j06K1T7ClIFQw7a6zB3tZ8gw1PYMFkess1d6HGOlSxjF1oootcFf8F" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -68,42 +77,11 @@ e€ØW                   a word character?
              fƤ   ⁶    with the string up to that point filtered to spaces.
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 53 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 53 bytes</h1>
 
 <pre class="lang-none prettyprint-override"><code>x=&gt;x.replace(/ |(?&lt;=[aeiou])(?=\w)/gi,_=&gt;c+=' ',c='')
 </code></pre>
 <p><a href="https://tio.run/##bVHbctMwEH3PV5w324NxfwC3k6RpGjB1iUMplA6jyqqlRpGEJd8Y/j0otYen7uhBu2fPXs6@kJZYWgvj3itdsiPVymrJEqmrcPaAYKNM44J4BgR54/7/d8w6UGKZHf1rJqWO0elalskYutMdkygMoUJVE0uXZMCgG5CagZPWIyCwQsoBptZPkh0m9tIPg7WWzyCqxKu35ERKpiqGwhG6X/WUE@@N@fO3bIQWb9qIfelW9W74KnKDub18XvOP@wx/7und081hzPj9jW3d92ajb0GK8qq6fvkk8aNftgv1ecxYi5YpPyZWqpLCcjjWu3jEiDF@tVajY5CwhoAKqGpasuaD41Ofq3y7285vkG2KWyzzRZ5hnq3zbFKOCwv/6EmIysuSoOC6dq9nOMU6oexUdTO1PoAzL7Pzd9kLuoduXAzJSHlS3Y9CmWfgcZYciAmPfXreJzUz0sfDM/wNLz6kD4QJ3TxG4UX6s4vOKhH/Ss/puzRAENM0CKJjFB3/AQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>s</code>, 151 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 18.875 bytes</h1>
-<pre><code>øWƛṫ$ƛAI+;ṅp;∑ƛð=[¥I+&amp;›
-</code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJzPSIsIiIsIsO4V8ab4bmrJMabQUkrO+G5hXA74oiRxpvDsD1bwqVJKybigLoiLCIiLCJUb2RheSB5b3UgYXJlIGhhdmluZyBhIHNpbGx5IHByb2JsZW0uIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
-<p>Bitstring:</p>
-<pre><code>0001011010100000000000101000111001001011011000111010110010100100000100111110010010100011010100010111010000001011011011111011101110000101010100010011101
-</code></pre>
-<p>A silly answer to a silly problem ;p</p>
-<h2>Explained</h2>
-<pre><code>øWƛṫ$ƛAI+;ṅp;∑ƛð=[¥I+&amp;›­⁡​‎‎⁪⁡⁪⁠⁪⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁪‏‏​⁡⁠⁡‌⁢​‎‎⁪⁡⁪⁠⁪⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁡⁪‏‏​⁡⁠⁡‌⁣​‎‎⁪⁡⁪⁠⁪⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁪‏‏​⁡⁠⁡‌⁤​‎‎⁪⁡⁪⁠⁪⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁢⁪‏‏​⁡⁠⁡‌⁢⁡​‎‎⁪⁡⁪⁠⁪⁢⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁡⁪‏‏​⁡⁠⁡‌⁢⁢​‎‏​⁢⁠⁡‌⁢⁣​‎‎⁪⁡⁪⁠⁪⁢⁣⁪‏‏​⁡⁠⁡‌⁢⁤​‎‎⁪⁡⁪⁠⁪⁢⁤⁪‏‏​⁡⁠⁡‌⁣⁡​‎‎⁪⁡⁪⁠⁪⁣⁡⁪‏‏​⁡⁠⁡‌⁣⁢​‎‎⁪⁡⁪⁠⁪⁣⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁤⁪‏‏​⁡⁠⁡‌⁣⁣​‎‎⁪⁡⁪⁠⁪⁤⁢⁪‏‏​⁡⁠⁡‌⁣⁤​‎‎⁪⁡⁪⁠⁪⁤⁣⁪‏‏​⁡⁠⁡‌⁤⁡​‎‎⁪⁡⁪⁠⁪⁤⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁢⁪‏‏​⁡⁠⁡‌⁤⁢​‎‎⁪⁡⁪⁠⁪⁢⁡⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁤⁪‏‏​⁡⁠⁡‌⁤⁣​‎‎⁪⁡⁪⁠⁪⁢⁢⁡⁪‏‏​⁡⁠⁡‌⁤⁤​‎‎⁪⁡⁪⁠⁪⁢⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁣⁪‏‏​⁡⁠⁡‌⁢⁡⁡​‎‏​⁢⁠⁡‌­
-øW                       # ‎⁡Split input on words
-  ƛ         ;            # ‎⁢To each word:
-   ṫ$                    # ‎⁣    Push last letter, word without last letter
-     ƛ   ;               # ‎⁤    To each letter of the word without the last letter:
-      AI+                # ‎⁢⁡      Use AI to determine if a space should be added
-# ‎⁢⁢      (Well, not really)
-      A                  # ‎⁢⁣      Is the character a vowel?
-       I                 # ‎⁢⁤      Push a space if so, empty string otherwise
-        +                # ‎⁣⁡      And add that to the letter
-          ṅp             # ‎⁣⁢  Join that into a single string and prepend to the last letter
-             ∑           # ‎⁣⁣Join all of that into a single string (because it'll be a list of words)
-              ƛ          # ‎⁣⁤To each letter in that single string:
-               ð=[       # ‎⁤⁡  If the letter is a space:
-                  ¥I     # ‎⁤⁢    Push (register) number of spaces (register starts at 0)
-                    +    # ‎⁤⁣    Append to the letter
-                     &amp;›  # ‎⁤⁤    And increment the register to keep track of how many spaces have been encountered
-# ‎⁢⁡⁡The s flag joins that into a single string
-💎
-</code></pre>
-<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
 
 <table id="st">
