--- a/q/276042.html
+++ b/q/276042.html
@@ -26,12 +26,34 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>017</td><td>Vyxal s</td><td>241011T010339Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276045#276045">lyxal</a></td></tr>
-<tr d-ix="1"><td>016</td><td>Vyxal</td><td>241011T023608Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276050#276050">emanresu</a></td></tr>
-<tr d-ix="2"><td>019</td><td>Jelly</td><td>241011T020839Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276049#276049">Unrelate</a></td></tr>
-<tr d-ix="3"><td>053</td><td>JavaScript Node.js</td><td>241011T013249Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276047#276047">l4m2</a></td></tr>
+<tr d-ix="0"><td>037</td><td>Retina 0.8.2</td><td>241011T044913Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276051#276051">Neil</a></td></tr>
+<tr d-ix="1"><td>017</td><td>Vyxal s</td><td>241011T010339Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276045#276045">lyxal</a></td></tr>
+<tr d-ix="2"><td>016</td><td>Vyxal</td><td>241011T023608Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276050#276050">emanresu</a></td></tr>
+<tr d-ix="3"><td>019</td><td>Jelly</td><td>241011T020839Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276049#276049">Unrelate</a></td></tr>
+<tr d-ix="4"><td>053</td><td>JavaScript Node.js</td><td>241011T013249Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276047#276047">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>s</code>, 136 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 17 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 37 bytes</h1>
+<pre><code>i`[aeiou]\B
+$&amp; 
+ (?&lt;=(( )|.)+)
+$#2$* 
+</code></pre>
+<p><a href="https://tio.run/##bZDNbtswEITv@xQDxAjs1tCh5waB7dqOWzVKLDV/bYHQ1EZkTZOKSFlW0Xd36ZwzWGAxc9nZr@GgrTge9fNPwdq1v39NaXAOwvDy88VwiNG/ZPRxRIOzT4MPOB5Xtm4DZW04rYJ9gBSePV2xMW6MzjWmTOjOdWyQ10JqW1HhStGjdy1Ew1BiH0MIeG1Mj7pxG8O7hGauZCydeYGwJd7cTAlj2FaMPAi5nR@kEtHR5D3R9F3RbTdviv6HzmpM/JeXpfq6TfH3Qd5trnf0es/r8Niu3A1EXi6qqz/fDJ4Os/3Ufqel3rONbTC3ldFeIfAhjEnUdey9d@gYBr4WkBq2SqhRfVA7WmTrYj25RrrKbzDLplmKSbrMUiqU9ogjT79V8dMEuXJNeKN4yjptfUIrEjsojqhCJLrVcgvXhjEMi/JELl6U7JP/" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Link includes test cases. Explanation:</p>
+<pre><code>i`[aeiou]\B
+$&amp; 
+</code></pre>
+<p>Insert spaces after every non-trailing vowel in either upper or lower case.</p>
+<pre><code> (?&lt;=(( )|.)+)
+$#2$* 
+</code></pre>
+<p>Replace each space with the spaces so far, obtained by counting them in a lookbehind and then repeating a space by the count.</p>
+<p>24 bytes in <a href="https://github.com/m-ender/retina/wiki/The-Language" rel="nofollow noreferrer">Retina</a> 1:</p>
+<pre><code>i` |([aeiou])\B
+$1$&gt;:&amp;* 
+</code></pre>
+<p><a href="https://tio.run/##bZBBb9NAEIXv8yveoaCCIku9ckBKQuoGTF1iU2gBqdP11Ltks2u86zhG/Pew6blPI43eu8ybr5doHF8cX53nD0fzgH/nP1iMH369@bmgs4uz9@9ev8XxuHbdEKkc4mnVEiIUBwl0Jdb6GUbf2yajWz@KRdWxMq6l2jc8YfIDuBdo3qcQjGCsndD1/tHKLqOlbwS5t09g1@DZLTVbK64VVJHVdnVQmpOj@UuixYuiL@Oqr6evpuwwDx@ecv1xW@Dvd3X7eL2jP99kE@@Gtb8BV81le/X7k8X9YblfuM@Um7241AYr11oTNKIc4oy461LvvccosAgdQxm4NqNeT1Hv6LLc1Jv5NYp1dYNluSgLzIu8LKjWJiCNOv3Wpk8zVNr38ZniKRuNCxmtiXfQklDFRHRr1BZ@iDNY4eZELl1UErL/" rel="nofollow noreferrer" title="Retina – Try It Online">Try it online!</a> Link includes test cases. Explanation: <code>$&gt;:&amp;</code> gives the match index, which is then used to repeat spaces, so all that remains is to replace all of the spaces and append to all of the non-trailing vowels.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>s</code>, 136 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 17 bytes</h1>
 <pre><code>øWƛṫ$ƛA꘍;p∑;ṅƛð=[&amp;›¥I
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9cyIsIiIsIsO4V8ab4bmrJMabQeqYjTtw4oiRO+G5hcabw7A9WybigLrCpUkiLCIiLCJIZWxsbywgd29ybGQuIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -40,7 +62,7 @@
 </code></pre>
 <p>A very silly approach</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 16 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 16 bytes</h1>
 <pre><code>⇧a?Aǔ*ÞṗṠ⌈fꜝ₅ɽ꘍∑
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLih6dhP0HHlCrDnuG5l+G5oOKMiGbqnJ3igoXJveqYjeKIkSIsIiIsImNvZGUsIGdvbGYsIGFuZCBjb2RlIl0=" rel="nofollow noreferrer">Try it Online!</a>
@@ -58,7 +80,7 @@ I don't like this but it's probably optimal. +4 bytes due to the weird punctuati
                 ∑ # Concatenate the result
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 19 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 19 bytes</h1>
 <pre><code>e€ØWḊae€Øc$kKfƤẹ¦¥⁶
 </code></pre>
 <p><a href="https://tio.run/##bZDNctMwEMfveoo9cMz4HZKQpqGmLrFpKbetvLG2liVjSXHcG1yY4Ql4AODEkWH4uLUzvEf6IkYpHLujmdV@zO7@f9ek9TCOdP/u693Hi/2PD/jvK5/UJ5s/n/a/ft5@uf18//b7uP/97e59rF2O48q0wYss@IMryHmQ6MiJ4zjMTqC3nS4TcW570pC3KNlUorAlDjDYANgRKNzGJCA4jvuh7eyVpiYRc1sSLK3eAJoSHqK5Qq3JVAS5R1kvdlJhjMT0MROzR0286BddMbzkrIWpe7pZqmd1Cjev5PnVaSPeXNDaX4aVPQPMy6Pq@PpEw@vdfDszz8WSt2TiNbAwlWanwNPOTwS2bbx7a6En0OBaBMlgqkR0avCqEUfZulhPTyFd5Wcwz2ZZCtN0maWiUOwgPnnQVkWlCeTKdv6B4iHXs3GJWAlsQFFE5SPRmmUNNvgJaMLyQC5ulBT7/guMM9j06K1T7ClIFQw7a6zB3tZ8gw1PYMFkess1d6HGOlSxjF1oootcFf8F" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -77,7 +99,7 @@ e€ØW                   a word character?
              fƤ   ⁶    with the string up to that point filtered to spaces.
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 53 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 53 bytes</h1>
 
 <pre class="lang-none prettyprint-override"><code>x=&gt;x.replace(/ |(?&lt;=[aeiou])(?=\w)/gi,_=&gt;c+=' ',c='')
 </code></pre>
