--- a/q/276042.html
+++ b/q/276042.html
@@ -26,20 +26,75 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>049</td><td>JavaScript Node.js</td><td>241011T013249Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276047#276047">l4m2</a></td></tr>
-<tr d-ix="1"><td>037</td><td>Retina 0.8.2</td><td>241011T044913Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276051#276051">Neil</a></td></tr>
-<tr d-ix="2"><td>017</td><td>Vyxal s</td><td>241011T010339Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276045#276045">lyxal</a></td></tr>
-<tr d-ix="3"><td>016</td><td>Vyxal</td><td>241011T023608Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276050#276050">emanresu</a></td></tr>
-<tr d-ix="4"><td>019</td><td>Jelly</td><td>241011T020839Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276049#276049">Unrelate</a></td></tr>
+<tr d-ix="0"><td>033</td><td>Charcoal</td><td>241011T063404Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276052#276052">Neil</a></td></tr>
+<tr d-ix="1"><td>049</td><td>JavaScript Node.js</td><td>241011T013249Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276047#276047">l4m2</a></td></tr>
+<tr d-ix="2"><td>037</td><td>Retina 0.8.2</td><td>241011T044913Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276051#276051">Neil</a></td></tr>
+<tr d-ix="3"><td>017</td><td>Vyxal s</td><td>241011T010339Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276045#276045">lyxal</a></td></tr>
+<tr d-ix="4"><td>016</td><td>Vyxal</td><td>241011T023608Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276050#276050">emanresu</a></td></tr>
+<tr d-ix="5"><td>019</td><td>Jelly</td><td>241011T020839Z</td><td><a href="https://codegolf.stackexchange.com/questions/276042/vo-we-l-spa-ci-ng/276049#276049">Unrelate</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 49 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 33 bytes</h1>
+<pre><code>ＦＳ«Ｆ№⁺ ω↧ι⭆⊞Ｏυ¹ Ｆ›ι ι≔×β№aeiou↧ιω
+</code></pre>
+<p><a href="https://tio.run/##XY5BasNADEXX9SmEVxpwA11nFbIIgZYakgtMHMUWOCMjzdSL0rNPJrFXBa0e//2vbvDaiR9zvokCHsOU4ikqhx6dg9/q7YX3kkLEdkyGNdQNzK6BT5lJO2@E7Eq0LU7ERf3yE7bJhu@J1EdRTA18FKW4zm3XzoOSj6TIK18b@BnYmXEf8Mx3Mrw0sOzXnlhS/X/6@c62@sv5PLBBuU6uBL2Mtw2cBtFIFhc2c7BNld9/xgc" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
+<pre><code>ＦＳ«
+</code></pre>
+<p>Loop through the input string.</p>
+<pre><code>Ｆ№⁺ ω↧ι
+</code></pre>
+<p>If the current character is a space, or it is a letter and the previous character was a vowel, then...</p>
+<pre><code>⭆⊞Ｏυ¹ 
+</code></pre>
+<p>...output one more space than last time.</p>
+<pre><code>Ｆ›ι ι
+</code></pre>
+<p>Output the current character if it is not a space.</p>
+<pre><code>≔×β№aeiou↧ιω
+</code></pre>
+<p>Remember whether the current character is a vowel for the next pass.</p>
+<p>Alternative approach, also 33 bytes:</p>
+<pre><code>⭆⪪⭆θ⎇∧κ∧№β↧ι№aeiou↧§θ⊖κ⁺ ιι ⁺× κι
+</code></pre>
+<p><a href="https://tio.run/##TUxBDoIwELz7ig2nNql8wBPRi4kmJPCBWlbYUFpsi@jraxFN2OzuZGYyozrplJU6xtKRCawKCdqrHFk1atryh4AanZHuzQrTsF7AAkc7pdRNwMXO6JT0yIhzAaueSSQ7ZVu3CGfT4GupO6FyOKAJmOr4dwSUevIsg5Qhvlx6if2Nmgb82f1q80OMdUce0irbILRW33OoOusC@rBqMxmf7@L@qT8" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
+<pre><code>   θ                                Input string
+  ⭆                                 Map over characters and join
+      κ                             Current index
+     ∧                              Logical And
+        №                           Count of
+           ι                        Current character
+          ↧                         Lowercased
+         β                          In predefined variable lowercase alphabet
+       ∧                            Logical And
+            №                       Count of
+                    θ               Input string
+                   §                Indexed by
+                      κ             Current index
+                     ⊖              Decremented
+                  ↧                 Lowercased
+             aeiou                  In literal string `aeiou`
+    ⎇                               If true then
+                                    Literal space
+                       ⁺            Concatenated with
+                         ι          Current character
+                          ι         Else current character
+ ⪪                                  Split on spaces
+⭆                                   Map over each part and join
+                                    Literal space
+                             ×      Repeated by
+                               κ    Current index
+                            ⁺       Plus
+                                ι   Current part
+                                    Implicitly print
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 49 bytes</h1>
 
 <pre class="lang-none prettyprint-override"><code>x=&gt;x.replace(/ |(?&lt;=[aeiou])\B/gi,_=&gt;c+=' ',c='')
 </code></pre>
 <p><a href="https://tio.run/##bVHbctMwEH3PV5w3J4NxfwCXSdI0DZi6xKEFSodR5a2lRpGMJd86/HtQag9P3dGDds@evZx9Zg2zvJKle69NTkdutDWKImWK6eQewUaXtQvCCRCktfv/35F14MySHfwrUsqEaE2l8mgI3ZqWFLKScamLkWVy1qM3NVhFEKzxCBisVKpHWZlHRYeRvfTDYG3UE5jO8eotBVOKdEHIHOP7VccF896QP3/LBmjxpg3Y13ZV7fpvMi0xtxdPa/Fpn@DlO799vD4MGX/uaOt@1BtzA5bll8XV82eFn92yWegvQ8ZaNqT9mFjpQkkr4Khz4YCxsvSrNQYtQcGWDFxCF@OSleidGPtcptvddn6NZJPdYJku0gTzZJ0mo3JCWvjHT0IUXpYImTCVez3DKdZKbceqm7H1AYK8zM7fZS/5HqZ2IRSx/KS6H4WTZ@BhEh1YOT128XkXVVQqH5@e4e/044f4npE09cPs1@KskOHv@Jy/iwMEIY@DYHaczY7/AA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>-4 bytes Neil</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 37 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 37 bytes</h1>
 <pre><code>i`[aeiou]\B
 $&amp; 
  (?&lt;=(( )|.)+)
@@ -60,7 +115,7 @@ $1$&gt;:&amp;*
 </code></pre>
 <p><a href="https://tio.run/##bZBBb9NAEIXv8yveoaCCIku9ckBKQuoGTF1iU2gBqdP11Ltks2u86zhG/Pew6blPI43eu8ybr5doHF8cX53nD0fzgH/nP1iMH369@bmgs4uz9@9ev8XxuHbdEKkc4mnVEiIUBwl0Jdb6GUbf2yajWz@KRdWxMq6l2jc8YfIDuBdo3qcQjGCsndD1/tHKLqOlbwS5t09g1@DZLTVbK64VVJHVdnVQmpOj@UuixYuiL@Oqr6evpuwwDx@ecv1xW@Dvd3X7eL2jP99kE@@Gtb8BV81le/X7k8X9YblfuM@Um7241AYr11oTNKIc4oy461LvvccosAgdQxm4NqNeT1Hv6LLc1Jv5NYp1dYNluSgLzIu8LKjWJiCNOv3Wpk8zVNr38ZniKRuNCxmtiXfQklDFRHRr1BZ@iDNY4eZELl1UErL/" rel="nofollow noreferrer" title="Retina – Try It Online">Try it online!</a> Link includes test cases. Explanation: <code>$&gt;:&amp;</code> gives the match index, which is then used to repeat spaces, so all that remains is to replace all of the spaces and append to all of the non-trailing vowels.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>s</code>, 136 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 17 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>s</code>, 136 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 17 bytes</h1>
 <pre><code>øWƛṫ$ƛA꘍;p∑;ṅƛð=[&amp;›¥I
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9cyIsIiIsIsO4V8ab4bmrJMabQeqYjTtw4oiRO+G5hcabw7A9WybigLrCpUkiLCIiLCJIZWxsbywgd29ybGQuIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -69,7 +124,7 @@ $1$&gt;:&amp;*
 </code></pre>
 <p>A very silly approach</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 16 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 16 bytes</h1>
 <pre><code>⇧a?Aǔ*ÞṗṠ⌈fꜝ₅ɽ꘍∑
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLih6dhP0HHlCrDnuG5l+G5oOKMiGbqnJ3igoXJveqYjeKIkSIsIiIsImNvZGUsIGdvbGYsIGFuZCBjb2RlIl0=" rel="nofollow noreferrer">Try it Online!</a>
@@ -87,7 +142,7 @@ I don't like this but it's probably optimal. +4 bytes due to the weird punctuati
                 ∑ # Concatenate the result
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 19 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 19 bytes</h1>
 <pre><code>e€ØWḊae€Øc$kKfƤẹ¦¥⁶
 </code></pre>
 <p><a href="https://tio.run/##bZDNctMwEMfveoo9cMz4HZKQpqGmLrFpKbetvLG2liVjSXHcG1yY4Ql4AODEkWH4uLUzvEf6IkYpHLujmdV@zO7@f9ek9TCOdP/u693Hi/2PD/jvK5/UJ5s/n/a/ft5@uf18//b7uP/97e59rF2O48q0wYss@IMryHmQ6MiJ4zjMTqC3nS4TcW570pC3KNlUorAlDjDYANgRKNzGJCA4jvuh7eyVpiYRc1sSLK3eAJoSHqK5Qq3JVAS5R1kvdlJhjMT0MROzR0286BddMbzkrIWpe7pZqmd1Cjev5PnVaSPeXNDaX4aVPQPMy6Pq@PpEw@vdfDszz8WSt2TiNbAwlWanwNPOTwS2bbx7a6En0OBaBMlgqkR0avCqEUfZulhPTyFd5Wcwz2ZZCtN0maWiUOwgPnnQVkWlCeTKdv6B4iHXs3GJWAlsQFFE5SPRmmUNNvgJaMLyQC5ulBT7/guMM9j06K1T7ClIFQw7a6zB3tZ8gw1PYMFkess1d6HGOlSxjF1oootcFf8F" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
